Added contact me link

--- a/static/index.html
+++ b/static/index.html
@@ -8,5 +8,7 @@
 	</div>
 
 	<a id="ping-challenge-link" href="http://finnegan.herokuapp.com/ping">Ping ping!</a>
+
+	<a id="contact-me-link" href="mailto:neonskimmer@gmail.com">Contact me</a>
 </body>
 </html>
