Added README and link to github page

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 	</div>
 
 	<a id="ping-challenge-link" href="http://finnegan.herokuapp.com/ping">Ping ping!</a>
-
 	<a id="contact-me-link" href="mailto:neonskimmer@gmail.com">Contact me</a>
+	<a id="repository-link" href="https://github.com/bruno-c/finnegan">Source code</a>
 </body>
 </html>
