Fix broken big number test

--- a/static/decomposition.html
+++ b/static/decomposition.html
@@ -32,6 +32,10 @@
 				return num + ' is not a number';
 			}
 
+			if (result.error) {
+				return result.error;
+			}
+
 			return num + ' = ' + result.decomposition.join(' x ');
 		}
 
