Link to prime factors

--- a/static/index.html
+++ b/static/index.html
@@ -10,5 +10,7 @@
 	<a id="ping-challenge-link" href="http://finnegan.herokuapp.com/ping">Ping ping!</a>
 	<a id="contact-me-link" href="mailto:neonskimmer@gmail.com">Contact me</a>
 	<a id="repository-link" href="https://github.com/bruno-c/finnegan">Source code</a>
+	<a id="prime-factors-decomposition-link" href="/primeFactors/ui">Prime factors decomposition is rad</a>
+
 </body>
 </html>
